<resources>
    <string name="app_name">StudyLog</string>
    <string name="facebook_app_id">397161661812167</string>
    <string name="fb_login_protocol_scheme">fb397161661812167</string>
    <!--  Sign In  -->
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="apply">Apply</string>
    <string name="find_id">Find my ID</string>
    <string name="find_id_password">Find my ID And Passwrod</string>
    <string name="find_password">Find my password</string>
    <string name="close">Close</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="donothave_permission">You do not have read permission</string>
    <!--  Bottom Navigation View  -->
    <string name="home">home</string>
    <string name="todo">todo</string>
    <string name="gallery">Gallery</string>
    <string name="stopwatch">stopwatch</string>
    <string name="account">Account</string>
    <!--  Account  -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>
    <!--  Alarm  -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>
    <!--  Comment  -->
    <string name="send">Send</string>
    <!--  Add Photo  -->
    <string name="upload_image">Photo Upload</string>
    <string name="update_image">Photo Update</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
    <!--  Toolbar  -->
    <string name="back">Back</string>
    <!--  etc  -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_user_list">UserListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>