<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_planner"
        android:icon="@drawable/todo"
        android:enabled="true"
        android:title="@string/todo"/>
    <item
        android:id="@+id/action_add_photo"
        android:icon="@drawable/ic_add_a_photo"
        android:enabled="true"
        android:title="@string/upload_image"/>
    <item
        android:id="@+id/action_timer"
        android:icon="@drawable/timer"
        android:enabled="true"
        android:title="@string/stopwatch"/>
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account"
        android:enabled="true"
        android:title="@string/account"/>

</menu>